--- a/index.html
+++ b/index.html
@@ -9,24 +9,55 @@
         body {
             font-family: 'Poppins', sans-serif;
             text-align: center;
-            margin: 50px;
-            background-color: #f4f4f4;
+            margin: 0;
+            background: linear-gradient(to top, #FF8A78, #737373);
             color: #333;
+            overflow: hidden;
+            position: relative;
+            height: 100vh;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+        }
+        .background-layer {
+            position: absolute;
+            width: 100%;
+            height: 100%;
+            backdrop-filter: blur(10px);
+            z-index: -1;
         }
         .container {
-            background: white;
+            background: rgba(255, 255, 255, 0.2);
+            backdrop-filter: blur(10px);
             padding: 30px;
             border-radius: 10px;
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
             display: inline-block;
+            position: relative;
+            border: 2px solid transparent;
+            background-clip: padding-box;
+            z-index: 1;
+        }
+        .container::before {
+            content: "";
+            position: absolute;
+            top: -2px;
+            left: -2px;
+            right: -2px;
+            bottom: -2px;
+            background: linear-gradient(to right, white, transparent);
+            border-radius: 10px;
+            z-index: -1;
         }
         input {
             padding: 10px;
             margin: 10px;
             width: 200px;
-            border: 1px solid #ccc;
+            border: 1px solid rgba(255, 255, 255, 0.3);
             border-radius: 5px;
             font-size: 16px;
+            background: rgba(255, 255, 255, 0.2);
+            color: #333;
         }
         button {
             padding: 12px 20px;
@@ -46,9 +77,25 @@
             font-weight: 600;
             font-size: 18px;
         }
+        .circle {
+            position: absolute;
+            border-radius: 50%;
+            opacity: 0.5;
+            background-color: rgba(255, 140, 0, 0.7);
+            animation: floatAround 10s infinite ease-in-out;
+            z-index: -2;
+        }
+        @keyframes floatAround {
+            0% { transform: translate(0, 0) scale(1); }
+            25% { transform: translate(-20px, -30px) scale(1.1); }
+            50% { transform: translate(20px, -10px) scale(1); }
+            75% { transform: translate(-10px, 20px) scale(1.05); }
+            100% { transform: translate(0, 0) scale(1); }
+        }
     </style>
 </head>
 <body>
+    <div class="background-layer"></div>
     <div class="container">
         <h2>Website Pricing Calculator</h2>
         <p>Enter the amount you want to pay:</p>
@@ -65,9 +112,9 @@
                 return;
             }
 
-            let websites = Math.floor(payment / 2) + Math.floor(payment / 3);
-            let customDomains = payment >= 4 ? Math.floor((payment - 2) / 4) : 0;
-            let encryptedSites = payment >= 7 ? Math.floor((payment - 5) / 6) : 0;
+            let websites = 1 + Math.floor((payment - 2) / 2);
+            let customDomains = Math.floor(payment / 4);
+            let encryptedSites = Math.floor(payment / 5);
 
             document.getElementById('result').innerHTML = `
                 For $${payment}, you get:<br>
@@ -76,6 +123,22 @@
                 ${encryptedSites} encrypted website(s)
             `;
         }
+        
+        function createFloatingCircles() {
+            for (let i = 0; i < 15; i++) {
+                let circle = document.createElement("div");
+                let size = Math.random() * 50 + 20;
+                circle.classList.add("circle");
+                circle.style.width = `${size}px`;
+                circle.style.height = `${size}px`;
+                circle.style.left = `${Math.random() * 100}vw`;
+                circle.style.top = `${Math.random() * 100}vh`;
+                circle.style.backgroundColor = `rgba(255, ${Math.floor(Math.random() * 100 + 100)}, 0, 0.7)`;
+                circle.style.animationDuration = `${Math.random() * 6 + 5}s`;
+                document.querySelector(".background-layer").appendChild(circle);
+            }
+        }
+        createFloatingCircles();
     </script>
 </body>
 </html>
